--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -1802,35 +1802,6 @@ spec:
                               description: URI points to the manifest yaml file
                               type: string
                           type: object
-                        kubeVip:
-                          properties:
-                            arch:
-                              description: Architectures of the asset
-                              items:
-                                type: string
-                              type: array
-                            description:
-                              type: string
-                            imageDigest:
-                              description: The SHA256 digest of the image manifest
-                              type: string
-                            name:
-                              description: The asset name
-                              type: string
-                            os:
-                              description: Operating system of the asset
-                              enum:
-                              - linux
-                              - darwin
-                              - windows
-                              type: string
-                            osName:
-                              description: Name of the OS like ubuntu, bottlerocket
-                              type: string
-                            uri:
-                              description: The image repository, name, and tag
-                              type: string
-                          type: object
                         metadata:
                           properties:
                             uri:
@@ -1843,7 +1814,6 @@ spec:
                       - clusterAPIController
                       - clusterTemplate
                       - components
-                      - kubeVip
                       - metadata
                       - version
                       type: object
@@ -2358,6 +2328,35 @@ spec:
                                   description: The image repository, name, and tag
                                   type: string
                               type: object
+                            cfssl:
+                              properties:
+                                arch:
+                                  description: Architectures of the asset
+                                  items:
+                                    type: string
+                                  type: array
+                                description:
+                                  type: string
+                                imageDigest:
+                                  description: The SHA256 digest of the image manifest
+                                  type: string
+                                name:
+                                  description: The asset name
+                                  type: string
+                                os:
+                                  description: Operating system of the asset
+                                  enum:
+                                  - linux
+                                  - darwin
+                                  - windows
+                                  type: string
+                                osName:
+                                  description: Name of the OS like ubuntu, bottlerocket
+                                  type: string
+                                uri:
+                                  description: The image repository, name, and tag
+                                  type: string
+                              type: object
                             hegel:
                               properties:
                                 arch:
@@ -2807,6 +2806,7 @@ spec:
                           required:
                           - actions
                           - boots
+                          - cfssl
                           - hegel
                           - hook
                           - rufio
@@ -3649,23 +3649,6 @@ spec:
                       - key
                       type: object
                     type: array
-                  upgradeRolloutStrategy:
-                    description: UpgradeRolloutStrategy determines the rollout strategy
-                      to use for rolling upgrades and related parameters/knobs
-                    properties:
-                      rollingUpdate:
-                        properties:
-                          maxSurge:
-                            type: integer
-                          maxUnavailable:
-                            type: integer
-                        required:
-                        - maxSurge
-                        - maxUnavailable
-                        type: object
-                      type:
-                        type: string
-                    type: object
                 type: object
               datacenterRef:
                 properties:
@@ -3735,9 +3718,6 @@ spec:
                 description: RegistryMirrorConfiguration defines the settings for
                   image registry mirror
                 properties:
-                  authenticate:
-                    description: Authenticate defines if registry requires authentication
-                    type: boolean
                   caCertContent:
                     description: CACertContent defines the contents registry mirror
                       CA certificate
@@ -3824,23 +3804,6 @@ spec:
                         - key
                         type: object
                       type: array
-                    upgradeRolloutStrategy:
-                      description: UpgradeRolloutStrategy determines the rollout strategy
-                        to use for rolling upgrades and related parameters/knobs
-                      properties:
-                        rollingUpdate:
-                          properties:
-                            maxSurge:
-                              type: integer
-                            maxUnavailable:
-                              type: integer
-                          required:
-                          - maxSurge
-                          - maxUnavailable
-                          type: object
-                        type:
-                          type: string
-                      type: object
                   type: object
                 type: array
             type: object
@@ -4831,26 +4794,21 @@ spec:
           metadata:
             type: object
           spec:
-            description: TinkerbellDatacenterConfigSpec defines the desired state
-              of TinkerbellDatacenterConfig
+            description: "TinkerbellDatacenterConfigSpec defines the desired state
+              of TinkerbellDatacenterConfig \n Important: Run \"make generate\" to
+              regenerate code after modifying this file"
             properties:
               hookImagesURLPath:
                 description: HookImagesURLPath can be used to override the default
-                  Hook images path to pull from a local server.
+                  Hook images path to pull from a local server
                 type: string
               osImageURL:
                 description: OSImageURL can be used to override the default OS image
-                  path to pull from a local server.
+                  path to pull from a local server
                 type: string
-              skipLoadBalancerDeployment:
-                description: SkipLoadBalancerDeployment when set to "true" can be
-                  used to skip deploying a load balancer to expose Tinkerbell stack.
-                  Users will need to deploy and configure a load balancer manually
-                  after the cluster is created.
-                type: boolean
               tinkerbellIP:
                 description: TinkerbellIP is used to configure a VIP for hosting the
-                  Tinkerbell services.
+                  Tinkerbell servies.
                 type: string
             required:
             - tinkerbellIP
@@ -5140,8 +5098,6 @@ spec:
             properties:
               datacenter:
                 type: string
-              disableCSI:
-                type: boolean
               insecure:
                 type: boolean
               network:
@@ -5341,8 +5297,6 @@ rules:
   - cloudstackmachineconfigs
   - clusters
   - dockerdatacenterconfigs
-  - nutanixdatacenterconfigs
-  - nutanixmachineconfigs
   - snowmachineconfigs
   - vspheredatacenterconfigs
   - vspheremachineconfigs
@@ -5849,27 +5803,6 @@ webhooks:
     - UPDATE
     resources:
     - snowmachineconfigs
-  sideEffects: None
-- admissionReviewVersions:
-  - v1
-  - v1beta1
-  clientConfig:
-    service:
-      name: eksa-webhook-service
-      namespace: eksa-system
-      path: /mutate-anywhere-eks-amazonaws-com-v1alpha1-vspheredatacenterconfig
-  failurePolicy: Fail
-  name: mutation.vspheredatacenterconfig.anywhere.amazonaws.com
-  rules:
-  - apiGroups:
-    - anywhere.eks.amazonaws.com
-    apiVersions:
-    - v1alpha1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - vspheredatacenterconfigs
   sideEffects: None
 - admissionReviewVersions:
   - v1
