--- a/.github/workflows/stale-issue-mgr.yaml
+++ b/.github/workflows/stale-issue-mgr.yaml
@@ -8,7 +8,7 @@
 # Runs every Monday morning at 1AM.
 # Docs: https://github.com/actions/stale
 
-name: 'Close stale issues and PRs'
+name: 'Label and close stale issues'
 on:
   schedule:
     - cron: '0 1 * * MON'
@@ -18,13 +18,13 @@ jobs:
     steps:
       - uses: actions/stale@v6
         with:
-          days-before-stale: ${{ env.STALE_ISSUE_DAYS }}
-          days-before-close: ${{ env.CLOSE_AFTER_DAYS }}
+          days-before-stale: ${{ env.ISSUE_STALE_DAYS }}
+          days-before-close: ${{ env.ISSUE_CLOSE_AFTER_DAYS }}
           stale-issue-message: >
-            This issue has had no activity for ${{ env.STALE_ISSUE_DAYS }} days. 
-            Labeling as stale and closing in ${{ env.CLOSE_AFTER_DAYS}} if not further activity.
+            This issue has had no activity for ${{ env.ISSUE_STALE_DAYS }} days. 
+            Labeling as stale and closing in ${{ env.ISSUE_CLOSE_AFTER_DAYS }} if no further activity.
           stale-issue-label: 'stale issue'
           any-of-issue-labels: 'external'
 env:
-  STALE_ISSUE_DAYS: 60
-  CLOSE_AFTER_DAYS: 7
+  ISSUE_STALE_DAYS: 60
+  ISSUE_CLOSE_AFTER_DAYS: 7
