--- a/.github/workflows/stale-issue-mgr.yaml
+++ b/.github/workflows/stale-issue-mgr.yaml
@@ -24,8 +24,8 @@ jobs:
           stale-issue-message: >
             This issue has had no activity for ${{ env.ISSUE_STALE_DAYS }} days. 
             Labeling as stale and closing in ${{ env.ISSUE_CLOSE_AFTER_DAYS }} if no further activity.
-          stale-issue-label: 'stale issue'
+          stale-issue-label: 'stale'
           any-of-issue-labels: 'external'
 env:
-  ISSUE_STALE_DAYS: 0
-  ISSUE_CLOSE_AFTER_DAYS: 7
+  ISSUE_STALE_DAYS: 60
+  ISSUE_CLOSE_AFTER_DAYS: 0
