--- a/.github/workflows/stale-issue-mgr.yaml
+++ b/.github/workflows/stale-issue-mgr.yaml
@@ -1,7 +1,7 @@
 # Stale issue handler (could also be extended for stale PRs in future)
 
 # This action will: 
-# * Add a label "stale issue" on issues after 60 days of inactivity and comment on them if they also have the "external" label
+# * Add a label "stale" on issues after 60 days of inactivity and comment on them if they also have the "external" label
 # * Close the stale issues and pull requests after 7 days of inactivity
 # * If an update/comment occur on stale issues or pull requests, the stale label will be removed and the timer will restartif they have the "external" label
 
