[WIP] adding pre-requisites for nutanix csi driver
after this, we can do following steps to install nutanix csi driver
<pre>
helm repo add nutanix https://nutanix.github.io/helm/
helm repo update

helm install nutanix-csi-snapshot nutanix/nutanix-csi-snapshot -n ntnx-system --create-namespace

helm install nutanix-storage nutanix/nutanix-csi-storage -n ntnx-system
</pre>
for more details: https://opendocs.nutanix.com/capx/latest/addons/install_csi_driver/

--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -155,6 +155,9 @@ spec:
       - echo "::1         ipv6-localhost ipv6-loopback" >/etc/hosts
       - echo "127.0.0.1   localhost" >>/etc/hosts
       - echo "127.0.0.1   $(hostname)" >> /etc/hosts
+      - apt update
+      - apt install -y nfs-common open-iscsi
+      - systemctl enable --now iscsid
     postKubeadmCommands:
       - echo export KUBECONFIG=/etc/kubernetes/admin.conf >> /root/.bashrc
     useExperimentalRetryJoin: true
