Update and rename stale-mgr.yaml to stale-labeler.yaml

--- a/.github/workflows/stale-labeler.yaml
+++ b/.github/workflows/stale-labeler.yaml
@@ -1,14 +1,14 @@
-# Stale issue handler (could also be extended for stale PRs in future)
+# Stale labeler for PRs and issues
 
 # This action will: 
-# * Add a label "stale" on issues after 60 days of inactivity and comment on them if they also have the "external" label
+# * Add a label "stale" on issues and PRs after STALE_DAYS of inactivity and comment on them if they also have the "external" label
 # * Close the stale issues and pull requests after 7 days of inactivity
 # * If an update/comment occur on stale issues or pull requests, the stale label will be removed and the timer will restart if they have the "external" label
 
 # Runs every morning at 1AM: We don't want people having to wait a whole week to get the stale label removed 
 # Docs: https://github.com/actions/stale
 
-name: 'Label and close stale issues'
+name: 'Label and close stale issues and PRs'
 on:
   schedule:
     - cron: '0 1 * * *'
