--- a/.github/workflows/stale-labeler.yaml
+++ b/.github/workflows/stale-labeler.yaml
@@ -24,8 +24,8 @@ jobs:
           days-before-pr-stale: -1 # With a negative number, this is currently turned off
           days-before-pr-close: -1 # With a negative number, this is currently turned off
           stale-issue-message: >
-            There has been no activity on this issue for ${{ env.STALE_DAYS }} days. 
-            Labeling as stale and closing in ${{ env.CLOSE_AFTER_DAYS }} days if no further activity.
+            There has been no activity on this issue for ${{ env.ISSUE_STALE_DAYS }} days. 
+            Labeling as stale and closing in ${{ env.ISSUE_CLOSE_AFTER_DAYS }} days if no further activity.
           stale-pr-message: >
             There has been no activity on this PR for ${{ env.PR_STALE_DAYS }} days. 
             Labeling as stale and closing in ${{ env.PR_CLOSE_AFTER_DAYS }} days if no further activity.
